NO MORE CHANGES

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
   <p>Prepping the stage for a collab</p>
   <p>What kind of conflicts will appear?</p>
-  <p>Making more changes.</p>
+  <p>NO MORE CHANGES.</p>
   <p>Changes accepted</p>
 
 </body>
