--- a/main.html
+++ b/main.html
@@ -8,5 +8,7 @@
   <p>Changes accepted</p>
 
   <p>Trying to cause conflict</p>
+  <p>Trying to cause conflict</p>
+  <!-- <p>Trying to cause conflict</p> -->
 
 </body>
