--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 </html>
 
 <body>
-  <p>Prepping the stage for a collab</p>
+  <h3><p>Prepping the stage for a collab</p></h3>
   <p>What kind of conflicts will appear?</p>
   <p>NO MORE CHANGES.</p>
   <p>Changes accepted</p>
