more conflict hopefully?

--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <body>
   <p>Prepping the stage for a collab</p>
   <p>What kind of conflicts will appear?</p>
-  <p>NO MORE CHANGES.</p>
+  <p><s>NO MORE CHANGES.</s></p>
   <p>Changes accepted</p>
 
   <p>Trying to cause conflict</p>
