--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <h3><p>Prepping the stage for a collab</p></h3>
   <p>What kind of conflicts will appear?</p>
   <p>NO MORE CHANGES.</p>
-  <p>Changes accepted</p>
+  <p>Changes asdfadsfads</p>
 
   <p>Trying to cause conflict</p>
   <p>Trying to cause conflict</p>
