--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
   <h3><p>Prepping the stage for a collab</p></h3>
   <p>What kind of conflicts will appear?</p>
   <p><s>NO MORE CHANGES.</s></p>
+  <p><s>You sure about that?</s></p>
   <p>Changes accepted</p>
   
   <p>Trying to cause conflict</p>
